Update Pathfinder Vizualizer
Add legend for pathfinder vizualizer

--- a/projects/pathfinder-vizualizer/Scripts/node.css
+++ b/projects/pathfinder-vizualizer/Scripts/node.css
@@ -107,6 +107,7 @@ td.weight{
   animation-play-state: running;
   background-image:url('../Icons/weight.png');
   background-size:contain;
+  background-repeat: no-repeat;
 }
 
 td.visited{
