--- a/css/main_page.css
+++ b/css/main_page.css
@@ -12,12 +12,10 @@ body, html{
 #navigation{
     width: 100%;
     display: inline-flexbox;
-    background-size: contain;
     font-size: 0px;
-    position: -webkit-sticky;
-    position: sticky;
+    position: absolute;
     top: 0;
-    background: white
+    text-align: right;
 }
 #navigation ul{
     height: 100%;
@@ -28,16 +26,16 @@ body, html{
 #navigation ul li{
     display: inline-block;
     font-size: 15px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: "Segoe UI", "Lucida Grande", "Ubuntu", "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
     padding: 15px 20px;
     font-weight: bold;
-    color: black;
-    cursor: pointer;
+    color: rgb(230, 230, 230);
+    cursor: default;
 }
 
 #navigation ul li:hover{
-    color: rgb(121, 154, 224);
-    background: rgba(0, 0, 0, 0.041); 
+    color: rgb(243, 228, 96);
+    transform: scale(1.2);
     transition: 0.4s;
 }
 
@@ -48,62 +46,86 @@ body, html{
     background-repeat: no-repeat;
     background-size: contain;
 }
-
-.content{
-    font-size: 0px;
-    text-align: center;
+#content{
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 #about{
-    height: 50vh;
-    display: inline-block;
+    height: 100vh;
+    background: url(../resources/about_bg.jpg);
     width: 100%;
-    background: rgba(255, 0, 0, 0.226);
     position: relative;
-    object-fit: contain;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    text-align: center;
 }
 
-
-#about .aboutme{
+#about .msg{
+    font-size: 60px;
+    font-family: "Segoe UI", "Lucida Grande", "Ubuntu", "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+    font-weight: bold;
+    color: rgb(230, 230, 230);
     position: relative;
-    height: 100%;
-    width: 100%;
+    top: 30vh;
+    background: black;
+    cursor: default;
+}
+
+.msganim{
+    animation: msgAnim;
+    animation-delay: 0;
+    animation-duration: 4s;
+    animation-iteration-count: 0;
+    animation-direction: normal;
+    animation-play-state: running;
+}
+
+#about .contact{
+    position: relative;
+    top: 35vh;
     display: inline-block;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    padding: 10px 20px;
+    font-size: 20px;
+    text-align: center;
+    cursor: default;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    cursor: pointer;
+    border: 2px solid white;
+    color: white;
+}
+
+#about .contact:hover{
+    transition: 1s;
+    background-color: rgba(0, 0, 0, 0.349);
+    border-radius: 10px;
+}
+
+.abcontainer{
+    text-align: center;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.397);
+}
+
+#projects{
+    height: 80vh;
+    background: url(../resources/about_bg.jpg);
+    width: 100%;
+    position: relative;
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
-    
-}
-
-#about .rightbtn{
-    position: absolute;
-    background: rgba(255, 255, 255, 0.548);
-    top:50%;
-    right:10%;
-    height: 20px;
-    width: 20px;
-}
-
-#about .leftbtn{
-    position: absolute;
-    background: rgba(255, 255, 255, 0.548);
-    top:50%;
-    left:10%;
-    height: 20px;
-    width: 20px;
-}
-
-
-#projects{
-    display: inline-block;
-    height: 500px;
-    width: 100%;
-    background: rgba(115, 255, 0, 0.301);
 }
 
 #android{
-    display: inline-block;
-    height: 500px;
+    height: 80vh;
     width: 100%;
+    position: relative;
     background: rgba(0, 255, 255, 0.384);
 }
