--- a/css/main_page.css
+++ b/css/main_page.css
@@ -156,6 +156,35 @@ body, html{
     position: relative;
     width: 100%;
     height: auto;
+    z-index: 1;
+}
+
+.overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0);
+    font-size: 0px;
+    z-index: 3;
+}
+
+.overlay:hover{
+    background: rgba(0, 0, 0, 0.5);
+    transition: 1s;
+}
+
+.project_text{
+    position: relative;
+    top: 50%;
+    width: 100%;
+    height: 100%;
+    font-size: 0px;
+    color: white;
+}
+
+.project_text:hover{
+    transition: 1s;
+    font-size: 30px;
 }
 
 #android{
