--- a/css/main_page.css
+++ b/css/main_page.css
@@ -7,6 +7,14 @@ body, html{
         margin: 0;
 }
 
+div{
+    user-select: none; /* standard syntax */
+    -webkit-user-select: none; /* webkit (safari, chrome) browsers */
+    -moz-user-select: none; /* mozilla browsers */
+    -khtml-user-select: none; /* webkit (konqueror) browsers */
+    -ms-user-select: none; /* IE10+ */
+}
+
 #navigation{
     width: 100%;
     position: absolute;
@@ -22,11 +30,6 @@ body, html{
 #navbar ul{
     height: 100%;
     font-size: 0;
-    user-select: none; /* standard syntax */
-    -webkit-user-select: none; /* webkit (safari, chrome) browsers */
-    -moz-user-select: none; /* mozilla browsers */
-    -khtml-user-select: none; /* webkit (konqueror) browsers */
-    -ms-user-select: none; /* IE10+ */
     position: relative;
     right: 5vh;
 }
@@ -64,11 +67,6 @@ body, html{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    user-select: none; /* standard syntax */
-    -webkit-user-select: none; /* webkit (safari, chrome) browsers */
-    -moz-user-select: none; /* mozilla browsers */
-    -khtml-user-select: none; /* webkit (konqueror) browsers */
-    -ms-user-select: none; /* IE10+ */
 }
 
 .abcontainer{
@@ -109,6 +107,7 @@ body, html{
     cursor: pointer;
     border: 2px solid white;
     color: white;
+    text-decoration: none;
     -webkit-transition: all 0.4s ease-out;
     -moz-transition: all 0.4s ease-out;
     -o-transition: all 0.4s ease-out;
@@ -127,7 +126,6 @@ body, html{
 }
 
 #projects{
-    min-height: 80vh;
     background: beige;
     width: 100%;
     position: relative;
@@ -135,59 +133,18 @@ body, html{
 }
 
 .project_list{
-    position: absolute;
-    top: 10vh;
-    font-size: 0;
-    width: 100%;
-    height: auto;
-}
-
-.project_container{
-    max-width: 300px;
-    max-height: 300px;
-    position: relative;
-    width: 25%;
-    height: auto;
-    display: inline-block;
-}
-
-
-.project_container img{
+    margin: 5% 0px;
     position: relative;
     width: 100%;
     height: auto;
-    z-index: 1;
-}
-
-.overlay{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0);
-    z-index: 3;
-}
-
-.overlay:hover{
-    background: rgba(0, 0, 0, 0.5);
-    transition: 1s;
-}
-
-.project_text{
-    position: relative;
-    padding-top: 40%;
-    width: 100%;
-    height: 100%;
-    color: white;
-}
-
-.project_text:hover{
-    font-size: 2vw;
+    min-width: 100px;
+    min-height: 100px;
+    display: inline-flex;
 }
 
 #android{
-    min-height: 70vh;
     width: 100%;
-    position: relative;
+    position: relative; 
     background: rgba(0, 255, 255, 0.384);
 }
 
@@ -196,4 +153,70 @@ body, html{
     font-size: 20px;
     width: 100%;
     background: black;
+}
+
+.container {
+    position: relative;
+    background: red;
+    width: 100%;
+    height: 100%;
+    margin: 0px 5vh;
+    display: inline-block;
+}
+
+.image {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .3s ease;
+    background-color: rgba(0, 0, 0, 0.60);
+    text-align: center;
+}
+
+.container:hover .overlay {
+    opacity: 1;
+}
+
+.icon{
+    text-decoration: none;
+}
+
+.project-obj {
+    color: white;
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    font-size: 1.6vw;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.project-title {
+    color: white;
+    position: relative;
+    top: 40%;
+    width: 100%;
+    font-size: 2.6vw;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+    text-decoration: none;
+}
+.project-explanation{
+    display: inline-block;
+    text-align: center;
+    font-size: 2vw;
+    margin-bottom: 10px;
 }
