Clean Up Sudoku project
Remake some of the functions of the code, use shorter code (recursion) etc for brute-force and add generation of random new puzzle with 1 solution

--- a/projects/Sudoku/Scripts/sudoku.css
+++ b/projects/Sudoku/Scripts/sudoku.css
@@ -41,6 +41,11 @@ button{
     margin-left: 10px;
 }
 
+.qns{
+    background-color: rgba(0, 0, 0, 0.100);
+}
+
 .invalid{
     background: red;
 }
+
